--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,8 @@ html{
 }
 
 .circle-big{
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     
 }
 
@@ -78,10 +78,13 @@ html{
 }
 
 .circle-pull-right{
+    margin-top: 3rem;
+    margin-bottom: 2rem;
     margin-left: auto;
 }
 
 .circle-pull-middle{
+    display: none;
     margin-left: 25%;
 }
 
@@ -294,7 +297,7 @@ figcaption{
 
 .section-about{
     margin-top: 10rem;
-    padding: 30rem 0;
+    padding: 15rem 0;
 }
 
 .about__img{
